--- a/sites/all/themes/storefront/sass/screen.sass
+++ b/sites/all/themes/storefront/sass/screen.sass
@@ -126,6 +126,7 @@ table
   float: left
   #site-name
     color: #fff
+    font-size: 2em
     padding: 20px 0 0
     a
       text-decoration: none
@@ -429,7 +430,7 @@ ul.action-links li
       overflow: hidden
       padding: 27px 0 0
       width: 30px
-      cursor:pointer
+      cursor: pointer
       &:hover
         background-position: 0 -32px
       &:active
