--- a/sites/all/themes/storefront/css/responsive/smartphone.css
+++ b/sites/all/themes/storefront/css/responsive/smartphone.css
@@ -102,9 +102,6 @@
     background-color: transparent;
     -webkit-border-radius: 0 0;
     -moz-border-radius: 0 / 0;
-    -o-border-radius: 0 / 0;
-    -ms-border-radius: 0 / 0;
-    -khtml-border-radius: 0 / 0;
     border-radius: 0 / 0;
     border: 0;
     padding: 5px 0;
@@ -140,7 +137,7 @@
   }
   /* line 90, ../../sass/responsive/smartphone.sass */
   table thead tr th.views-field-edit-delete {
-    with: 20px;
+    width: 20px;
     overflow: hidden;
   }
   /* line 93, ../../sass/responsive/smartphone.sass */
@@ -223,9 +220,8 @@
     display: block !important;
     margin: 0;
     padding: 1px;
-    -moz-box-shadow: 0 0 0 transparent;
     -webkit-box-shadow: 0 0 0 transparent;
-    -o-box-shadow: 0 0 0 transparent;
+    -moz-box-shadow: 0 0 0 transparent;
     box-shadow: 0 0 0 transparent;
   }
 
