--- a/sites/all/themes/storefront/sass/responsive/smartphone.sass
+++ b/sites/all/themes/storefront/sass/responsive/smartphone.sass
@@ -88,7 +88,7 @@
       font-weight: bold
       text-align: center
     thead tr th.views-field-edit-delete
-      with: 20px
+      width: 20px
       overflow: hidden
     tbody tr td
       font-size: 1em
