--- a/sites/all/themes/ebazar/less/style.less
+++ b/sites/all/themes/ebazar/less/style.less
@@ -166,7 +166,7 @@ body{
 
 }
 
-.view-bazar, .view-Simmilar-items {
+.view-display-products, .view-Simmilar-items {
 
 	a{
 
@@ -391,13 +391,13 @@ body{
 }
 
 
-.view-bazar.view-display-id-page_1 {
+.view-display-products.view-display-id-page_1 {
 
 	margin-top: 15px;
 
 }
 
-.view-bazar.view-display-id-page_2{
+.view-display-products.view-display-id-page_2{
 
 	margin-top: 15px;
 
@@ -412,7 +412,7 @@ body{
 
 	}
 
-	.view-bazar {
+	.view-display-products {
 
 		.views-row:nth-child(6n + 1){
 		
@@ -566,7 +566,7 @@ body{
 
 /* Featured Brands */
 
-#block-views-featured-brands-block, #block-views-bazar-block-1, #block-views-gender-block{
+#block-views-featured-brands-block, #block-views-display-products-block-1, #block-views-gender-block{
 
 	border-top: 1px solid #EEEEEE;
     margin-top: 25px;
@@ -1330,7 +1330,7 @@ aside .block:nth-child(1){
 
 }
 
-.view-bazar.view-display-id-block_3  {
+.view-display-products.view-display-id-block_3  {
 
 	.views-row{
 
@@ -1500,7 +1500,7 @@ aside .block:nth-child(1){
 
 .page-node-41{
 
-	#block-views-bazar-block-2{
+	#block-views-display-products-block-2{
 
 		border-top: 1px solid #EEEEEE;
 	    margin-top: 10px;
@@ -1539,7 +1539,7 @@ aside .block:nth-child(1){
 
 @media (min-width: 1200px){
 
-	.view-bazar.view-display-id-page_2 .views-field-field-item-notice {
+	.view-display-products.view-display-id-page_2 .views-field-field-item-notice {
 
 		margin-left: 3px;
     	margin-top: -3px;
@@ -1574,7 +1574,7 @@ aside .block:nth-child(1){
 
 	.page-node-31{
 
-		#block-views-featured-brands-block, #block-views-bazar-block-1, #block-views-gender-block {
+		#block-views-featured-brands-block, #block-views-display-products-block-1, #block-views-gender-block {
 	        margin-top: 1px;
 		}
 
@@ -1588,7 +1588,7 @@ aside .block:nth-child(1){
 	    font-size: 56px;
 	}
 
-	.view-bazar.view-display-id-page_2 .views-field-field-item-notice {
+	.view-display-products.view-display-id-page_2 .views-field-field-item-notice {
 
 		margin-left: 3px;
     	margin-top: -3px;
