Updated CSS for Product ID

--- a/sites/all/themes/ebazar/less/overrides.less
+++ b/sites/all/themes/ebazar/less/overrides.less
@@ -649,3 +649,8 @@ table {
 .alert-danger a {
   color: darken(@alert-danger-text, 10%);
 }
+
+#productid {
+font-size: 11px;
+margin-bottom: 5px;
+}
