--- a/sites/all/themes/ebazar/less/style.less
+++ b/sites/all/themes/ebazar/less/style.less
@@ -96,7 +96,8 @@ body.page-node-42 {
 
 body{
 	
-	background: url('../images/subtle_white_feathers.png');
+	
+	background: url(/sites/all/themes/ebazar/images/SquareGrill_Lrg.jpg);
 
 }
 
@@ -118,16 +119,19 @@ body{
 
 
 
-.main-container {
-    background: none repeat scroll 0 0 #FFFFFF;
-    box-shadow: 0 0 18px #CCCCCC;
-    padding: 9px 18px 30px;
+
+    
+    .main-container {
+background: none repeat scroll 0 0 #f8f8f8;
+box-shadow: 0 0 18px #CCCCCC;
+padding: 9px 18px 30px;
 }
+
 
 .one-sidebar {
 
 	.main-container {
-	    background: none repeat scroll 0 0 #FFFFFF;
+	    background: none repeat scroll 0 0 #f8f8f8;
 	    box-shadow: 0 0 18px #CCCCCC;
 	    padding: 20px 18px 30px;
 	}
@@ -1630,7 +1634,7 @@ aside .block:nth-child(1){
 	    	float: none !important;
 
 	    	img{
-
+				margin-top: 8px;
 	    		max-height: 48px;
 	    		width: auto;
 
