--- a/sites/all/themes/ebazar/less/style.less
+++ b/sites/all/themes/ebazar/less/style.less
@@ -2167,6 +2167,7 @@ body.navbar-is-static-top{
 .logo img {
     max-height: 48px;
     width: auto;
+    padding-top: 5px;
 }
 
 .highlighted.container{
@@ -2188,5 +2189,9 @@ body.navbar-is-static-top{
 
 	}
     
+}
+
+.region-sidebar-second {
+  padding-top: 15px;
 }
 
